# Side-Project

Book/Building computer vision projects with OpenCV4 and C++/cpp-opencv/chapter2/: README.md
Book/Building computer vision projects with OpenCV4 and C++/cpp-opencv/chapter2/reading_images/: CMakeLists.txt
Book/Building computer vision projects with OpenCV4 and C++/cpp-opencv/chapter3/: README.md
Book/Building computer vision projects with OpenCV4 and C++/cpp-opencv/chapter3/gui_qt_adding_buttons/: CMakeLists.txt  sample4.cpp
Cheat sheet/C++/.ipynb_checkpoints/: C++ for CV-checkpoint.ipynb
Cheat sheet/C++/Bash Terminal/.ipynb_checkpoints/: Bash Terminal-checkpoint.ipynb
Cheat sheet/Machine learning/.ipynb_checkpoints/: Azure-checkpoint.ipynb  ComputerVision-checkpoint.ipynb
Etc/Cheat sheet/C++/Linux Command Line Pipes and Redirection/: Linux Command Line Pipes and Redirection.ipynb
Etc/Cheat sheet/Machine learning/.ipynb_checkpoints/: Azure-checkpoint.ipynb  ComputerVision-checkpoint.ipynb
Learn Cpp/: README.md
Learn Cpp/examples/: Cheat Sheet.txt
Learn Cpp/examples/FunctionReturnValue/: FunctionReturnValue.cpp  FunctionReturnValue.sln  FunctionReturnValue.vcxproj
Learn Cpp/examples/doubleNumber/: doubleNumber.sln  doubleNumber.vcxproj
Learn Cpp/examples/multiple_code_files/: multiple_code_files.cpp  multiple_code_files.vcxproj
Learning Cpp/: README.md
Learning Cpp/examples/FunctionReturnValue/: FunctionReturnValue.vcxproj.filters
Learning Cpp/examples/doubleNumber/: doubleNumber.cpp
Learning Cpp/examples/multiple_code_files/: multiple_code_files.sln  multiple_code_files.vcxproj.filters
Project/2D Obejct Detection/: 2D_detection_YOLO.ipynb  README.md  export_2D_bbox.ipynb
Project/Face detection [C++]/: CMakeLists.txt  README.md  execution_command.txt  resnet_ssd_face_detection.cpp
Project/Face recognition/: Face_ID.py  README.md  README.md.txt
Project/Nuscenes dataset/2D_object_detection/: README.md  export_annotation.ipynb
(+179 files in other folders)
